add getTaskById route
